[package]
name = "twig"
version = "0.1.0"
description = "Twig templating engine for Rust; work in progress."
documentation = ""
repository = "https://github.com/rust-web/twig"
authors = [
    "Rust Twig Team",
    "Nerijus Arlauskas <nercury@gmail.com>",
    "Colin Kiegel <kiegel@gmx.de>"
]
license = "BSD-3-Clause"
