[package]
authors = ["Rust Twig Team", "Nerijus Arlauskas <nercury@gmail.com>", "Colin Kiegel <kiegel@gmx.de>"]
description = "Twig templating engine for Rust; work in progress."
documentation = ""
license = "BSD-3-Clause"
name = "twig"
repository = "https://github.com/rust-web/twig"
version = "0.1.0"

[dependencies]
quick-error = "0.*"
